# vibescan-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/vibescan_mcp/: __init__.py  server.py
src/vibescan_mcp/tools/: rules.py  scan.py
